# JavascriptSubtitlesOctopus

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Dockerfile  Gruntfile.js  LICENSE  LICENSE.bundle  Makefile  Makefile_licence  README.md  aspect-ratio.html  brotliSubTest.html  ci-starter.sh  clappr.html  dash.mpd  flowplayer.html  fonts-map.html  fonts_map.html  functions.mk  index.html  jwplayer.html  mediaelement-dash.html  mediaelement.html  native.html  package-lock.json  package.json  plyr.html  pure.html  railgun.html  railgun_op.ass  railgun_op.html  resize-observer.html  run-buildah-build.sh  run-common.sh  run-docker-build.sh  stress.html  (+8 more)
.github/workflows/: emscripten.yml
assets/: fonts.conf  util.js
assets/js/: COPYRIGHT  subtitles-octopus-asmjs-worker.js.mem  subtitles-octopus-wasm-worker.js  subtitles-octopus-wasm-worker.wasm  subtitles-octopus-worker-legacy.js  subtitles-octopus-worker-legacy.js.mem  subtitles-octopus-worker.js  subtitles-octopus-worker.js.mem  subtitles-octopus-worker.wasm  subtitles-octopus.js
example/: aspect-ratio.html  flowplayer.html  fonts_map.html  index.html  jwplayer.html  mediaelement.html  pure.html  railgun_op.html  test.ass  videojs.html
experimental/no1d-render/: stress.html  subtitles-octopus-worker.js  subtitles-octopus-worker.wasm  subtitles-octopus.js
js/: subtitles-octopus-worker.asm.js  subtitles-octopus-worker.js  subtitles-octopus-worker.js.mem  subtitles-octopus-worker.wasm  subtitles-octopus.js
js/asmjs/: subtitles-octopus-sync.js  subtitles-octopus-worker.js  subtitles-octopus-worker.js.mem  subtitles-octopus.js
js/both/: subtitles-octopus-sync.js  subtitles-octopus-worker.js  subtitles-octopus-worker.js.mem  subtitles-octopus-worker.wasm  (+1 more)
src/: Makefile  Makefile.am  SubOctpInterface.cpp  SubOctpInterface.js  SubtitleOctopus.cpp  SubtitleOctopus.idl  brotli.cpp  configure.ac  libass.cpp  polyfill.js  post-worker.js  pre-worker.js  subtitles-octopus-worker.c  subtitles-octopus.js  unbrotli.js
subtitles/: aot3p2_op.ass.br  railgun_op.ass.br  test.ass  test.ass.br
(+5 files in other folders)
