AM_CFLAGS = -Wall

noinst_PROGRAMS = subtitlesoctopus
subtitlesoctopus_SOURCES = subtitles-octopus-worker.c
#test_CPPFLAGS = -I../libass/libass
#test_LDADD = ../libass/libass/.libs/libass.a
#test_LDFLAGS = $(AM_LDFLAGS) $(LIBPNG_LIBS) -static

#SOURCES = libassjs.c
#all: libassjs
#libassjs: $(SOURCES)
#		gcc -o $@ $(SOURCES)